core, editoast: rename signal_sighting to signal_critical_position
Letting core's API v1 untouched (as it didn't change)
