# core/src/main/kotlin/fr/sncf/osrd/api/api_v2/CommonSchemas.kt
@@ -37,7 +37,7 @@ class ZoneUpdate(
     @Json(name = "is_entry") val isEntry: Boolean,
 )
 
-class SignalSighting(
+class SignalCriticalPosition(
     val signal: String,
     val time: TimeDelta,
     val position: Offset<TravelledPath>,
