# editoast/openapi.yaml
@@ -3506,7 +3506,7 @@ components:
       - $ref: '#/components/schemas/ReportTrain'
       - type: object
         required:
-        - signal_sightings
+        - signal_critical_positions
         - zone_updates
         - spacing_requirements
         - routing_requirements
@@ -3515,10 +3515,10 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/RoutingRequirement'
-          signal_sightings:
+          signal_critical_positions:
             type: array
             items:
-              $ref: '#/components/schemas/SignalSighting'
+              $ref: '#/components/schemas/SignalCriticalPosition'
           spacing_requirements:
             type: array
             items:
@@ -9806,8 +9806,11 @@ components:
           maxLength: 255
           minLength: 1
       additionalProperties: false
-    SignalSighting:
+    SignalCriticalPosition:
       type: object
+      description: |-
+        First position (space and time) along the path where given signal must
+        be free (sighting time or closed-signal stop ending)
       required:
       - signal
       - time
@@ -9888,7 +9891,7 @@ components:
             - $ref: '#/components/schemas/ReportTrain'
             - type: object
               required:
-              - signal_sightings
+              - signal_critical_positions
               - zone_updates
               - spacing_requirements
               - routing_requirements
@@ -9897,10 +9900,10 @@ components:
                   type: array
                   items:
                     $ref: '#/components/schemas/RoutingRequirement'
-                signal_sightings:
+                signal_critical_positions:
                   type: array
                   items:
-                    $ref: '#/components/schemas/SignalSighting'
+                    $ref: '#/components/schemas/SignalCriticalPosition'
                 spacing_requirements:
                   type: array
                   items:
